# MoviesGRS_experiments_MFDP

./: .env  .gitattributes  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/data/: group2.pq  group3.pq  group4.pq  group5.pq  group6.pq  group7.pq  movies_train.pq  ratings_test.pq  ratings_train.pq
src/data_raw/: genome-scores.pq  genome-tags.pq  genome.pq  links.pq  movies.pq  movies_data.pq  ratings.pq  tags.pq  tmdb_5000_credits.pq  tmdb_5000_movies.pq  tmdb_data.pq  users_history.pq
src/models/: movie_embeddings_cosine.ipynb  movie_embeddings_euclidean.ipynb  randomrec.ipynb  svd.ipynb  svd_hyperparams.ipynb  svd_trained.pkl  toppoprec.ipynb
src/preprocessing/: eda.ipynb  eda_and_preprocessing.ipynb  movies_data_collection.ipynb  movies_data_preprocessing.ipynb  ratings_data_preprocessing.ipynb  split_users.py
src/utils/: dataset_for_evaluation_collector.py  evaluation.py  recommendations_evaluation.py  recommender_data_preprocessor.py
